--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -10,4 +10,4 @@ jobs:
           make install 
           dvc repro
           git fetch --prune
-          dvc metrics diff --show-md
+          dvc metrics diff --show-md master
