--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -10,5 +10,6 @@ jobs:
           make install 
           dvc repro
           git fetch --prune
-          dvc metrics diff --show-md master
-          gh pr comment 13 --body "Hi from GitHub CLI"
+          dvc metrics diff --show-md master >> report.md
+          report.md
+          
