--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -11,5 +11,9 @@ jobs:
           dvc repro
           git fetch --prune
           dvc metrics diff --show-md master >> report.md
-          report.md
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v3
+        with:
+          issue-number: 1
+          body-path: 'report.md'
           
