--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -6,8 +6,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Running_updates
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           make install 
           dvc repro
           git fetch --prune
           dvc metrics diff --show-md master
+          gh pr comment 13 --body "Hi from GitHub CLI"
