--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -13,4 +13,4 @@ jobs:
           dvc repro
           git fetch --prune
           dvc metrics diff --show-md master >> report.md
-          gh pr comment --body "Hi from GitHub CLI"
+          gh pr comment ${{github.event.pull_request.number}} --body "Hi from GitHub CLI"
