--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -2,12 +2,16 @@ name: DVC Tracking with Github Actions
 on: [push]
 jobs:
   run:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Running_updates
+        env: 
+          GH_TOKEN: ${{ github.token }}
         run: |
           make install 
           dvc repro
           git fetch --prune
           dvc metrics diff --show-md master >> report.md
+          gh pr comment ${{github.event.pull_request.number}} -F report.md
