--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -13,5 +13,7 @@ jobs:
           make install 
           dvc repro
           git fetch --prune
-          dvc metrics diff --show-md master >> report.md
+          dvc metrics diff --show-md master > report.md
+          echo "## Validating results by region" >> report.md
+          echo "![](by_region.png)" >> report.md
           gh pr comment ${{github.event.pull_request.number}} -F report.md
