--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -2,7 +2,6 @@ name: DVC Tracking with Github Actions
 on: [push]
 jobs:
   run:
-    permissions: write-all
     runs-on: ubuntu-latest
     container: docker://dvcorg/cml-py3:latest
     steps:
@@ -10,6 +9,7 @@ jobs:
       - name: Running_updates
         env: 
           GH_TOKEN: ${{ github.token }}
+          repo_token: ${{ secrets.REPO_TOKEN }}
         run: |
           make install 
           dvc repro
