--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -2,16 +2,21 @@ name: DVC Tracking with Github Actions
 on: [push]
 jobs:
   run:
-    permissions: write-all
     runs-on: ubuntu-latest
+    container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v2
       - name: Running_updates
         env: 
           GH_TOKEN: ${{ github.token }}
+          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: |
           make install 
           dvc repro
           git fetch --prune
-          dvc metrics diff --show-md master >> report.md
-          gh pr comment ${{github.event.pull_request.number}} -F report.md
+          dvc metrics diff --show-md master > report.md
+          # Add figure to the report
+          echo "## Validating results by region"
+          cml-publish by_region.png --md >> report.md
+          cml-send-comment report.md
+          
