--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -15,6 +15,7 @@ jobs:
           dvc repro
           git fetch --prune
           dvc metrics diff --show-md master > report.md
+          git config --global --add safe.directory /__w/dvc_pipeline_tracking/dvc_pipeline_tracking
           # Add figure to the report
           echo "## Validating results by region"
           cml-publish by_region.png --md >> report.md
