Refactor dvc.yaml for improved formatting

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -9,11 +9,13 @@ stages:
   train:
     cmd: python train.py
     deps:
-    - train.py
-    - data_processed.csv
-    outs:
-    - by_region.png
+      - train.py
+      - data_processed.csv
     metrics:
-    - metrics.json:
-        cache: false
+      - metrics.json:
+          cache: false
+    plots:
+      - accuracy.json:
+          cache: false
+
 
