--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -7,28 +7,35 @@ permissions:
   pull-requests: write
 
 jobs:
-  run:
+  dvc-tracking:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository
-      - uses: actions/checkout@v4
+      # Step 1: Checkout repo with full credentials and history
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # ensures full git history for DVC comparisons
+          fetch-depth: 0               # Required for DVC to see full history
+          persist-credentials: true    # Keep credentials for git commands
+          token: ${{ secrets.REPO_TOKEN }}  # Use Personal Access Token
 
       # Step 2: Set up environment and run DVC pipeline
-      - name: Run DVC updates
+      - name: Run DVC pipeline
         env: 
           GH_TOKEN: ${{ github.token }}
           REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: |
+          echo "🔧 Installing dependencies..."
           make install
+          
+          echo "🚀 Reproducing DVC pipeline..."
           dvc repro
-          git fetch --prune
+          
+          echo "📊 Generating metrics diff..."
           dvc metrics diff --md master > report.md
 
-      # Step 3: Commit changes if any
-      - name: Commit changes
+      # Step 3: Commit changes (if any)
+      - name: Commit DVC changes
         id: commit
         run: |
           git config user.name "github-actions[bot]"
@@ -37,24 +44,36 @@ jobs:
           git add .
           if git diff --cached --quiet; then
             echo "no_changes=true" >> $GITHUB_ENV
+            echo "✅ No new changes detected."
           else
             echo "no_changes=false" >> $GITHUB_ENV
             git commit -m "Auto update DVC metrics $(date)"
+            echo "📦 Changes committed for PR creation."
           fi
 
-      # Step 4: Create Pull Request only if there are changes
+      # Step 4 (optional): Comment on existing PR if this workflow runs on a PR
+      - name: Comment DVC metrics on existing PR
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "💬 Commenting metrics diff on existing PR..."
+          gh pr comment ${{ github.event.pull_request.number }} -F report.md
+        env:
+          GH_TOKEN: ${{ github.token }}
+
+      # Step 5: Create a PR if changes exist
       - name: Create Pull Request
         if: env.no_changes == 'false'
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.REPO_TOKEN }}  # <-- Personal Access Token with repo scope
+          token: ${{ secrets.REPO_TOKEN }}  # Personal Access Token with repo scope
           branch: auto-update-${{ github.run_number }}
           title: "Automated DVC Update - Run #${{ github.run_number }}"
           body: |
-            This pull request was automatically created by a GitHub Action.
+            🧠 **Automated DVC Pipeline Update**
+            This pull request was automatically created by GitHub Actions.
             It contains updates from the latest DVC pipeline run.
-            See the metrics report below:
 
+            ### 📈 Metrics Diff
             ```markdown
             $(cat report.md)
             ```
